--- a/codebook/tpw_references.bib
+++ b/codebook/tpw_references.bib
@@ -1,3 +1,16 @@
+
+# ARQ second reference 
+@inproceedings{wongpakaran2021validation,
+  title={Validation of the relationships questionnaire (RQ) against the experience of close relationship-revised questionnaire in a clinical psychiatric sample},
+  author={Wongpakaran, Nahathai and DeMaranville, Justin and Wongpakaran, Tinakon},
+  booktitle={Healthcare},
+  volume={9},
+  number={9},
+  pages={1174},
+  year={2021},
+  organization={MDPI}
+}
+
 # Sex Survey
 
 @article{capaldi2002heterosexual,
